@@ -2,7 +2,7 @@ package com.fluendo.player;
 
 class Configure
 {
-  public String buildInfo = "I was built on Mon Dec 19 17:10:28 CET 2005 (version 0.1.2.1). Built using make.";
+  public String buildInfo = "I was built on Mon Dec 19 17:20:48 CET 2005 (version 0.1.2.1). Built using make.";
 
   public Configure() {
   }
