@@ -5,3 +5,4 @@ com.fluendo.plugin.AudioSinkJ2
 com.fluendo.plugin.OggDemux
 com.fluendo.plugin.TheoraDec
 com.fluendo.plugin.VorbisDec
+com.fluendo.plugin.Queue
